Quote API enaibled - swagger updated
